# rust-assistant

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Caddyfile  Dockerfile  IMPLEMENTATION_PLAN_DRAFT.md  README.md  alembic.ini  compose.yaml  pyproject.toml  rag_rust_assistant_readme.md
.github/workflows/: backend-image.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial_schema.py  0002_uuid_business_ids.py
data/eval/: retrieval_questions.jsonl
docs/: architecture.md  db_scheme.md
scripts/: eval_retrieval.py  serve.py
src/rust_assistant/: __main__.py  asgi.py  main.py
src/rust_assistant/api/: __init__.py  deps.py
src/rust_assistant/api/routers/: __init__.py  chat.py  search.py  system.py
src/rust_assistant/application/dto/: chunk_context.py  document_parse.py  ingest_pipeline.py  search.py
src/rust_assistant/bootstrap/: __init__.py  api.py  container.py  ingest.py  logging.py  settings.py
src/rust_assistant/clients/: __init__.py  llm.py  vectordb.py
src/rust_assistant/core/: __init__.py  config.py  logging.py
src/rust_assistant/core/db/: __init__.py  (+2 more)
src/rust_assistant/domain/: __init__.py  enums.py  errors.py
src/rust_assistant/ingest/: chunk.py  chunk_dedup.py  clean.py  dedup.py  discover.py  entities.py  parse.py  persist.py  pipeline.py  run.py  token_count.py
src/rust_assistant/models/: __init__.py  chunk.py  document.py
src/rust_assistant/repositories/: __init__.py  chunks.py  documents.py
src/rust_assistant/retrieval/: __init__.py  prompt.py  qa.py  qdrant_payload.py  retriever.py
src/rust_assistant/schemas/: __init__.py  chat.py  enums.py  search.py  system.py
src/rust_assistant/services/: __init__.py  chat_service.py  readiness_service.py  search_service.py
src/rust_assistant/utils/: __init__.py
src/rustrag/: models.py
src/rustrag/core/: models.py
src/rustrag/ingest/: chunk.py  chunk_dedup.py  clean.py  dedup.py  discover.py  parse.py  parse_html.py  pipeline.py  run.py
tests/: conftest.py
tests/ingest/: test_chunk.py  test_clean_dedup.py  test_discover.py  test_parse.py
tests/integration/api/: test_routes.py
tests/integration/db/: test_postgres_ingest.py
tests/integration/ingest/: test_discover.py  test_parse.py
tests/unit/: test_new_architecture_boundaries.py
tests/unit/alembic/: test_0002_uuid_business_ids.py
tests/unit/bootstrap/: test_container.py  test_ingest.py  test_logging.py  test_settings.py
tests/unit/core/: test_config.py  test_db_session.py  test_logging.py
tests/unit/infrastructure/: test_cli_ingest.py  test_dependency_boundaries.py  test_sqlalchemy_session.py
tests/unit/ingest/: test_chunk.py  test_clean_dedup.py  test_identities.py  test_parsing_utils.py  test_persist.py  test_pipeline.py  test_run.py  test_token_count.py
tests/unit/repositories/: test_chunks.py  test_documents.py
tests/unit/retrieval/: test_qdrant_payload.py  test_retriever.py
tests/unit/scripts/: test_eval_retrieval.py
tests/unit/services/: test_readiness_service.py
(+165 files in other folders)
