[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rust-assistant"
version = "0.1.0"
description = "RAG assistant for Rust documentation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # API
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",

    # Configuration and schemas
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.30.0",
    "qdrant-client>=1.17.1",

    # Embedding tokenization
    "transformers>=4.40.0",

    # HTML parsing for ingest
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.scripts]
rust-assistant = "rust_assistant.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "black>=23.7.0",
    "isort>=5.13.0",
    "ruff>=0.0.280",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["rust_assistant*"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
py_version = 312

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests/unit", "tests/integration"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra --strict-markers"
norecursedirs = [".venv", ".pytest_cache", "__pycache__"]
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "regression: regression coverage for previously fixed behavior",
    "slow: slow tests"
]
